# libchewing

./: .gitignore  CMakeLists.txt  Cargo.toml  cbindgen.toml
capi/chewing-internal/: Cargo.toml  build.rs  cbindgen.toml  chewing_internal.h
capi/chewing-internal/src/: binding.rs  bopomofo.rs  conversion.rs  dict.rs  lib.rs  types.rs
capi/chewing-public/: Cargo.toml  build.rs  cbindgen.toml  chewing_public.h
capi/chewing-public/src/: types.rs
cmake/: FindRust.cmake
data/: word.src
include/: chewingio.h  global.h
include/internal/: bopomofo-private.h  chewing-private.h  chewing-sql.h  dict-private.h  tree-private.h  userphrase-private.h
internal/: Cargo.toml  cbindgen.toml  chewing_internal.h
internal/src/: binding.rs  capi.rs  lib.rs
internal/src/capi/: bopomofo.rs  conversion.rs  dict.rs  userphrase.rs
src/: bopomofo.c  bopomofo.rs  chewingio.c  chewingutil.c  choice.c  conversion.rs  dict.c  dict.rs  dictionary.rs  editor.rs  keymap.rs  lib.rs  mod_aux.c  path.rs  private.h  tree.c  userphrase-hash.c  userphrase-sql.c  zhuyin.rs
src/c/: bopomofo.c  chewing-sql.c  dict.c  pinyin.c  tree.c  userphrase-hash.c  userphrase-sql.c  userphrase.c
src/capi/: bopomofo.rs
src/conversion/: chewing_conversion.rs  experimental_conversion.rs  tree_conversion.rs
src/dictionary/: layered.rs  sqlite.rs  trie.rs
src/editor/: estimate.rs  keymap.rs  layout.rs  phonetic.rs  syllable.rs
src/editor/layout/: dc26.rs  et.rs  et26.rs  ginyieh.rs  hsu.rs  ibm.rs  pinyin.rs  standard.rs
src/keymap/: hsu.rs
src/zhuyin/: bopomofo.rs  syllable.rs
test/: test-path.c
tools/: Cargo.toml
(+10 files in other folders)
