[package]
name = "chewing"
version = "0.5.1-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"

[lib]
crate-type = ["staticlib"]
name = "chewing_internal"

[build-dependencies]
cbindgen = "0.23.0"
