[package]
name = "chewing"
description = "The Chewing (酷音) intelligent Zhuyin input method."
license = "LGPL-2.1-or-later"
license-file = "COPYING"
documentation = "https://docs.rs/chewing"
version = "0.5.1-alpha.1"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
binary-layout = "3.0.0"
riff = "1.0.1"
miette = "4.7.0"

[workspace]
members = ["tools", "internal"]
