[package]
name = "chewing-tools"
description = "Tools of the Chewing (酷音) intelligent Zhuyin input method."
license = "LGPL-2.1-or-later"
version = "0.5.1-alpha.1"
edition = "2021"

[dependencies]
chewing = { version = "0.5.1-alpha.1", path = ".." }
thiserror = "1.0.31"
miette = { version = "4.7.0", features = ["fancy"] }
clap = "3.1.16"
chrono = "0.4.19"
